Fixed overflow issues.

--- a/components/layouts/bioLayout.module.scss
+++ b/components/layouts/bioLayout.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  @apply w-full min-h-screen absolute flex flex-col p-0 bg-secondary;
+  @apply w-full h-full absolute flex flex-col p-0 bg-secondary overflow-y-auto;
 }
 .main {
   @apply flex flex-col w-full;
