--- a/components/layouts/homeLayout.module.scss
+++ b/components/layouts/homeLayout.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  @apply w-full min-h-screen absolute flex flex-col p-0;
+  @apply w-full max-h-screen absolute flex flex-col p-0;
 }
 .main {
   @apply p-0 flex flex-auto flex-col justify-start items-center w-full;
