--- a/components/layouts/layout.module.scss
+++ b/components/layouts/layout.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  @apply w-full min-h-screen absolute flex flex-col p-0 bg-white;
+  @apply w-full h-full absolute flex flex-col p-0 bg-white overflow-y-auto;
 }
 .main {
   @apply flex flex-col w-full;
