--- a/components/layouts/mainLayout.module.scss
+++ b/components/layouts/mainLayout.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
-  @apply w-full min-h-screen absolute p-0 transform translate-x-0 transition-all duration-500 ease-in bg-primary;
+  @apply w-full min-h-screen absolute overflow-hidden p-0 transform translate-x-0 transition-all duration-500 ease-in bg-primary;
   &.showNav {
-    @apply transform -translate-x-full;
+    @apply transform -translate-x-full overflow-visible;
   }
 }
